tests/rosetta/out/Fortran/abundant-odd-numbers.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program abundant_odd_numbers
  implicit none
    integer, dimension(1) :: divs
    integer, allocatable, dimension(:) :: divs2
    integer :: i
    integer :: j
        integer, allocatable, dimension(:) :: app0
          integer, allocatable, dimension(:) :: app1
      integer, allocatable, dimension(:) :: app2
    integer :: tot
    integer :: v
    integer :: i3
    character(len=100) :: s
      character(len=100) :: s4
    character(len=100) :: s5
    character(len=100) :: s6
    integer :: count
          character(len=100) :: s7
          character(len=100) :: s8
          character(len=100) :: s9
    integer :: max
    character(len=100) :: s10
  call main()
  
  contains
  recursive integer function divisors(n) result(res)
    integer, intent(in) :: n
    divs = (/1/)
    allocate(divs2(0))
    i = 2
    do while (((i * i) <= n))
      if ((mod(n,i) == 0)) then
        j = int(((n / i)))
        if (allocated(app0)) deallocate(app0)
        allocate(app0(size(divs)+1))
        app0(1:size(divs)) = divs
        app0(size(divs)+1) = i
        divs = app0
        if ((i /= j)) then
          if (allocated(app1)) deallocate(app1)
          allocate(app1(size(divs2)+1))
          app1(1:size(divs2)) = divs2
          app1(size(divs2)+1) = j
          divs2 = app1
        end if
      end if
      i = (i + 1)
    end do
    j = (size(divs2) - 1)
    do while ((j >= 0))
      if (allocated(app2)) deallocate(app2)
      allocate(app2(size(divs)+1))
      app2(1:size(divs)) = divs
      app2(size(divs)+1) = divs2(((j)+1))
      divs = app2
      j = (j - 1)
    end do
    res = divs
    return
  end function divisors
  recursive integer function sum(xs) result(res)
    integer, intent(in) :: xs
    tot = 0
    do i3 = 1, size(xs)
      v = xs(i3)
      tot = (tot + v)
    end do
    res = tot
    return
  end function sum
  recursive character(len=100) function sumStr(xs) result(res)
    integer, intent(in) :: xs
    s = ''
    i = 0
    do while ((i < size(xs)))
      write(s4,'(G0)') xs(((i)+1))
      s = (s + s4) // ' + '
      i = (i + 1)
    end do
    res = s(0+1:(size(s) - 3))
    return
  end function sumStr
  recursive character(len=100) function pad2(n) result(res)
    integer, intent(in) :: n
    write(s5,'(G0)') n
    s = s5
    if ((size(s) < 2)) then
      res = ' ' // s
      return
    end if
    res = s
    return
  end function pad2
  recursive character(len=100) function pad5(n) result(res)
    integer, intent(in) :: n
    write(s6,'(G0)') n
    s = s6
    do while ((size(s) < 5))
      s = ' ' // s
    end do
    res = s
    return
  end function pad5
  recursive integer function abundantOdd(searchFrom,countFrom,countTo,printOne) result(res)
    integer, intent(in) :: searchFrom
    integer, intent(in) :: countFrom
    integer, intent(in) :: countTo
    logical, intent(in) :: printOne
    count = countFrom
    n = searchFrom
    do while ((count < countTo))
      divs = divisors(n)
      tot = sum(divs)
      if ((tot > n)) then
        count = (count + 1)
        if (((printOne .and. count) < countTo)) then
          n = (n + 2)
          cycle
        end if
        s = sumStr(divs)
        if (.not. printOne) then
          write(s7,'(G0)') tot
          print *, trim(trim(trim(trim(trim(pad2(count) // '. ') // pad5(n)) // ' < ') // s) // ' = ') // s7
        else
          write(s8,'(G0)') n
          write(s9,'(G0)') tot
          print *, trim(trim(trim(s8 // ' < ') // s) // ' = ') // s9
        end if
      end if
      n = (n + 2)
    end do
    res = n
    return
  end function abundantOdd
  recursive subroutine main()
    max = 25
    write(s10,'(G0)') max
    print *, trim('The first ' // s10) // ' abundant odd numbers are:'
    n = abundantOdd(1,0,max,.false.)
    print *, ''//char(10)//'The one thousandth abundant odd number is:'
    abundantOdd(n,max,1000,.true.)
    print *, ''//char(10)//'The first abundant odd number above one billion is:'
    abundantOdd(1000000001,0,1,.true.)
  end subroutine main
end program abundant_odd_numbers
